sensord (0.6.24) unstable; urgency=low

  *

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Mon, 20 Sep 2010 10:32:41 +0300

sensord (0.6.23) unstable; urgency=low

  [Lihan Guo]
  * Fixes: NB#186211 - During an ongoing alarm notification, when a device placed flat is lifted up rapidly it snoozes the alarm
  * Implements: SWP#MaSSW-2027

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Thu, 09 Sep 2010 14:51:13 +0300

sensord (0.6.22) unstable; urgency=low

  [Lihan Guo]
  * Edit  tests/testutils/sensordiverter.sh, change als to FIFO
  * Fixes: NB#186831 - sensord-contextfw-tests fail because sensor faking no longer works  

  [Timo Rongas]
  * Removed libfilters.so (context in datatypes/ now)
  * Fixed a bug with missing libcompasschain.so in RotationSensor
  * Fixes: NB#190516 - sensord power management test case is failing

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Mon, 30 Aug 2010 09:47:38 +0300

sensord (0.6.21) unstable; urgency=low

  * Potentially solved bug #180060. Can't reproduce locally.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Thu, 26 Aug 2010 08:53:44 +0300

sensord (0.6.20) unstable; urgency=low

  * Implements: SWP#MaSSW-1892
  * Fixed deadclient test
  * Fixes: NB#179034 -  small improvements that are nice to have for sensord

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Wed, 28 Jul 2010 14:57:31 +0300

sensord (0.6.19) unstable; urgency=low

  * Sections for adaptor name resolving to configuration file
  * ContextSensor to behave sanely in absence of CompassChain
  * MetaData (range, description) fetched from the previous node in chain.
  * standyOverride -requests propagated via the filterchain.
  * Fixes: NB#175217 -  Sensord adaptors must be able to reject displayBlankOverride -requests
  * Magnetometer output scaled by coefficient from configuration file
  * Accelerometer coordinate tranformation matrix in configuration file

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 06 Jul 2010 12:52:55 +0300
