@@ -1,6 +1,7 @@
 sensord (0.6.24) unstable; urgency=low
 
-  *
+  [Timo Rongas]
+  * Fixes NB#192707 - Sensord polls constantly on otherwise idle device
 
  -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Mon, 20 Sep 2010 10:32:41 +0300
 
